// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaRugbyFixtures should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH ibauhN"
  >
    <div
      class="sc-bxivhb sc-EHOje euzmAc"
    />
    <div
      class="sc-htpNat inAUId"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaRugbyFixtures should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH hECBFg"
  >
    <div
      class="sc-bxivhb sc-EHOje euzmAc"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
